Diseño de todos los botones guardar hecho y el dise de los registros de clientes y categorias

--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -16,7 +16,7 @@
         <div class="card-body">
             <h5 class="card-title">Registro de Categorias</h5>
             <p class="card-text">Registro para agregar, modificar y eliminar Categorias de Productos.</p>
-            <a href="" class="btn btn-primary">Ir a Registro de Productos</a>
+            <a href="Categorias/0" class="btn btn-primary">Ir a Registro de Productos</a>
         </div>
     </div>
 
@@ -61,7 +61,7 @@
         <div class="card-body">
             <h5 class="card-title">Registro de Clienets</h5>
             <p class="card-text">Registro para agregar, modificar y eliminar Clientes.</p>
-            <a href="" class="btn btn-primary">Ir a Registro de Clientes</a>
+            <a href="Clientes/0" class="btn btn-primary">Ir a Registro de Clientes</a>
         </div>
     </div>
 
