--- a/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/PagosComponent.razor
@@ -54,16 +54,16 @@
         <EditForm Model="@pagos" OnValidSubmit="Guardar">
             <DataAnnotationsValidator />
             <label for="Id">PagoId</label>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <InputNumber id="id" @bind-Value="pagos.PagoId" class="form-control"></InputNumber>
-                        <ValidationMessage For="(()=>pagos.PagoId)"></ValidationMessage>
+            <div>
+                <div class="input-group">
+                    <InputNumber @bind-Value="pagos.PagoId" class="form-control"></InputNumber>
+                    <ValidationMessage For="(() => pagos.PagoId)"></ValidationMessage>
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
+                        <div />
+                        <div />
+                        <div />
                     </div>
-                </div>
-
-                <div class="col-md-4">
-                    <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
                 </div>
             </div>
 
@@ -79,9 +79,10 @@
                     <InputSelect @bind-Value="CompraId" class="form-control" @onclick="BuscarCompra" @onchange="BuscarCompra">
                         <option value="">Elija una compra</option>
                         @foreach (var item in ListaCompras)
-                        {
+                            {
                             <option value="@item.CompraId">@item.DescripcionCompra</option>
-                        }
+                            }
+                        /**/
                         /**/
                         /**/
                     </InputSelect>
