--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -54,16 +54,16 @@
         <EditForm Model="@usuarios" OnValidSubmit="Guardar">
             <DataAnnotationsValidator />
             <label for="Id">UsuarioId</label>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <InputNumber @bind-Value="usuarios.UsuarioId" class="form-control"></InputNumber>
-                        <ValidationMessage For="(()=> usuarios.UsuarioId)"></ValidationMessage>
+            <div>
+                <div class="input-group">
+                    <InputNumber @bind-Value="usuarios.UsuarioId" class="form-control"></InputNumber>
+                    <ValidationMessage For="(() => usuarios.UsuarioId)"></ValidationMessage>
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
+                        <div />
+                        <div />
+                        <div />
                     </div>
-                </div>
-
-                <div class="col-md-4">
-                    <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
                 </div>
             </div>
 
