--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -55,21 +55,20 @@
     <EditForm Model="@compras" OnValidSubmit="Guardar">
         <DataAnnotationsValidator />
         <label for="Id">CompraId</label>
-        <div class="row">
-            <div class="col-md-8">
-                <div class="form-group">
-
+        
+            <div>
+                <div class="input-group">
                     <InputNumber @bind-Value="compras.CompraId" class="form-control"></InputNumber>
                     <ValidationMessage For="(() => compras.CompraId)"></ValidationMessage>
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
+                        <div />
+                        <div />
+                        <div />
+                    </div>
                 </div>
             </div>
-
-            <div class="col-md-4">
-
-                <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
-
-            </div>
-        </div>
+        
 
         <div class="form-group">
             <label for="FechaCompra">Fecha de compra</label>
