--- a/ProyectoFinal-Aplicada2/Pages/ProveedoresComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProveedoresComponent.razor
@@ -55,21 +55,18 @@
         <EditForm Model="proveedores" OnValidSubmit="Guardar">
             <DataAnnotationsValidator></DataAnnotationsValidator>
             <label for="Id">ProveedorId</label>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="form-group">
-
-                        <InputNumber @bind-Value="proveedores.ProveedoresId" class="form-control"></InputNumber>
-                        <ValidationMessage For="(()=>proveedores.ProveedoresId)"></ValidationMessage>
+            <div>
+                <div class="input-group">
+                    <InputNumber @bind-Value="proveedores.ProveedoresId" class="form-control"></InputNumber>
+                    <ValidationMessage For="(() => proveedores.ProveedoresId)"></ValidationMessage>
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
+                        <div />
+                        <div />
+                        <div />
                     </div>
                 </div>
-
-
-                <div class="col-md-4">
-                    <button type="button" class="btn btn-primary" @onclick="Buscar">Buscar</button>
-                </div>
             </div>
-
 
             <div class="form-group">
                 <label for="NombreProveedor">Nombre</label>
