--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -9,15 +9,21 @@
 @using ProyectoFinal_Aplicada2.Shared
 @using ProyectoFinal_Aplicada2.Models
 @using ProyectoFinal_Aplicada2.Controllers;
+
 @inject ProductosControllers productoscontrollers
 @inject ProveedoresControllers proveedorescontrollers
 @inject ComprasControllers comprascontroller
 @inject VentasControllers ventascontroller
 @inject UsuariosControllers usuariocontroller
 @inject PagosControllers pagoscontroller
+@inject ClientesControllers clientescontollers
+@inject TipoProductosControllers tiposproductoscontrollers
+
+
 @using Blazored.Toast
 @using Blazored.Toast.Services
 @using Blazored.Toast.Configuration
 @using ProyectoFinal_Aplicada2.Data;
 @inject IToastService toastService
 @using ProyectoFinal_Aplicada2.Paginando;
+
