--- a/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
@@ -63,6 +63,26 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Consulta de Clientes</h5>
+                <p class="card-text">Consulta para acceder a los Clientes creados.</p>
+                <a href="ConsultaClientes" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Consulta de Tipos de Productos</h5>
+                <p class="card-text">Consulta para acceder a los Tipos de productos creados.</p>
+                <a href="ConsultaTipoProductos" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
