--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -3,74 +3,97 @@
 <h3>Menú de Registros</h3>
 
 <div class="row">
-        <div class="col-sm-6">
-            <div class="card" style="width: 18rem;">
-                <img src="/Imagenes/Usuario.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Registro de Usuarios</h5>
-                    <p class="card-text">Registro para agregar, modificar y eliminar Usuarios.</p>
-                    <a href="Usuarios/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6" >
-            <div class="card" style="width: 18rem;">
-                <img src="/Imagenes/ProductosHerbicidas.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Registro de Productos</h5>
-                    <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
-                    <a href="Productos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-                </div>
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img src="/Imagenes/Usuario.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Registro de Usuarios</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Usuarios.</p>
+                <a href="Usuarios/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
-    <br />
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card" style="width: 18rem;">
-                <img src="/Imagenes/Proveedores.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Registro de Proveedores</h5>
-                    <p class="card-text">Registro para agregar, modificar y eliminar Proveedores.</p>
-                    <a href="Proveedores/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card" style="width: 18rem;">
-                <img src="/Imagenes/com" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Registro de Compras</h5>
-                    <p class="card-text">Registro para agregar, modificar y eliminar Compras.</p>
-                    <a href="Compras/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-                </div>
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img src="/Imagenes/ProductosHerbicidas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Registro de Productos</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
+                <a href="Productos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
-    <br />
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <img src="/Imagenes/Pagos.png" class="card-img-top" alt="...">
-                    <h5 class="card-title">Registro de Pagos</h5>
-                    <p class="card-text">Registro para agregar, modificar y eliminar Pagos.</p>
-                    <a href="Pagos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6">
-            <div class="card" style="width: 18rem;">
-                <img src="/Imagenes/Ventas.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Registro de Ventas</h5>
-                    <p class="card-text">Registro para agregar, modificar y eliminar Ventas.</p>
-                    <a href="Ventas/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-                </div>
+</div>
+<br />
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img src="/Imagenes/Proveedores.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Registro de Proveedores</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Proveedores.</p>
+                <a href="Proveedores/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
     </div>
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img src="/Imagenes/com" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Registro de Compras</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Compras.</p>
+                <a href="Compras/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+</div>
+<br />
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <img src="/Imagenes/Pagos.png" class="card-img-top" alt="...">
+                <h5 class="card-title">Registro de Pagos</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Pagos.</p>
+                <a href="Pagos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img src="/Imagenes/Ventas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Registro de Ventas</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Ventas.</p>
+                <a href="Ventas/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+</div>
 
+
+<div class="row">
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <img src="/Imagenes/Pagos.png" class="card-img-top" alt="...">
+                <h5 class="card-title">Registro de Clientes</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Clientes.</p>
+                <a href="Clientes" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+            <img src="/Imagenes/Ventas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Registro de Tipos de productos</h5>
+                <p class="card-text">Registro para agregar, modificar y eliminar Tipos de productos.</p>
+                <a href="TipoProductos" class="btn btn-primary btn-lg btn-block">Entrar</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
 
