--- a/ProyectoFinal-Aplicada2/Pages/ClientesComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ClientesComponent.razor
@@ -53,7 +53,7 @@
         <EditForm Model="clientes" OnValidSubmit="Guardar">
             <DataAnnotationsValidator />
             <div class="row">
-                <label for="Id">ProductoId</label>
+                <label for="Id">ClienteId</label>
             </div>
             <div class="row">
                 <div class="col-md-8">
@@ -84,15 +84,9 @@
             </div>
 
             <div class="form-group">
-                <label for="FechaNacimiento">Fecha de nacimiento</label>
-                <InputDate @bind-Value="clientes.FechaNacimiento" class="form-control"></InputDate>
-                <ValidationMessage For="(() => clientes.FechaNacimiento)"></ValidationMessage>
-            </div>
-
-            <div class="form-group">
                 <label for="Telefono_O_Celular">Ingrese su número de teléfono o celular</label>
-                <InputText @bind-Value="clientes.Telefono_O_Celular" class="form-control" placeholder="celular o teléfono aquí"></InputText>
-                <ValidationMessage For="(() => clientes.Telefono_O_Celular)"></ValidationMessage>
+                <InputText @bind-Value="clientes.Numero" class="form-control" placeholder="celular o teléfono aquí"></InputText>
+                <ValidationMessage For="(() => clientes.Numero)"></ValidationMessage>
             </div>
 
             <div class="form-group">
