Agregando la inyeccion de dependia de categoria

--- a/ProyectoFinal-Aplicada2/_Imports.razor
+++ b/ProyectoFinal-Aplicada2/_Imports.razor
@@ -18,6 +18,7 @@
 @inject PagosControllers pagoscontroller
 @inject ClientesControllers clientescontollers
 @inject TipoProductosControllers tiposproductoscontrollers
+@inject CategoriasControllers categoriascontrollers
 
 
 @using Blazored.Toast
